--- a/SWE_TourManager/MainWindow.xaml
+++ b/SWE_TourManager/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SWE_TourManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tour Manager" Height="450" Width="800">
     <Grid>
-
+        <Button MouseDoubleClick="buttonHello_MouseDoubleClick" Click="buttonHello_Click" x:Name="buttonHello" Width="100" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">Do not click</Button>
     </Grid>
 </Window>
