Xaml done (design)
Layout/Design der MainView fertigestellt

--- a/SWE_TourManager/Views/MainWindowView.xaml
+++ b/SWE_TourManager/Views/MainWindowView.xaml
@@ -13,24 +13,143 @@
     </Window.DataContext>
 
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <TextBlock Text="Media Item List:" Margin="5"></TextBlock>
+        <Grid.ColumnDefinitions>
+
+            <ColumnDefinition Width="0.25*" />
+            <ColumnDefinition Width="0.6*" />
+            <ColumnDefinition Width="0.75*" />
+            <ColumnDefinition Width="0.75*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.3*" />
+            <RowDefinition Height="0.5*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.RowSpan="2">
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding NewTourCommand}">New Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ModifyTourCommand}">Modify Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding CopyTourCommand}">Copy Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ImportTourCommand}">Import Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ExportTourCommand}">Export Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding CreateLogCommand}">Create Log</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding PrintTourCommand}">Print Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding DeleteTourCommand}">Delete Tour</Button>
+        </StackPanel>
+
+        <StackPanel Orientation="Vertical" Grid.Column="1">
+            <TextBlock Text="Tours:" Margin="5"></TextBlock>
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Text="Name" Margin="0,0,5,0" VerticalAlignment="Center"></TextBlock>
-                <TextBox Grid.Column="1" Name="txtSearchName" VerticalAlignment="Center" Text="{Binding SearchName, Mode=TwoWay}"></TextBox>
-                <Button Grid.Column="2" Width="50" Margin="5,0,0,0" Command="{Binding SearchCommand}">Search</Button>
-                <Button Grid.Column="3" Width="50" Margin="5,0,0,0" Command="{Binding ClearCommand}">Clear</Button>
-            </Grid>  
+                <TextBox Grid.Column="0" Name="txtTourSearchName" VerticalAlignment="Center" Text="{Binding SearchTourName, Mode=TwoWay}"></TextBox>
+                <Button Grid.Column="1" Width="50" Margin="5,0,0,0" Command="{Binding SearchTourCommand}">Search</Button>
+                <Button Grid.Column="2" Width="50" Margin="5,0,5,0" Command="{Binding ClearTourCommand}">Clear</Button>
+            </Grid>
+
         </StackPanel>
-        <ListBox x:Name="listMediaItems" ItemsSource="{Binding Items}" SelectedItem="{Binding CurrentItem}" DisplayMemberPath="Name" Margin="0,50,0,0"></ListBox>
-        
+
+
+        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="1">
+            <TextBlock Text="Logs:" Margin="5"></TextBlock>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <TextBox Grid.Column="0" Name="txtLogSearchName" VerticalAlignment="Center" Text="{Binding SearchLogName, Mode=TwoWay}"></TextBox>
+                <Button Grid.Column="1" Width="50" Margin="5,0,0,0" Command="{Binding SearchLogCommand}">Search</Button>
+                <Button Grid.Column="2" Width="50" Margin="5,0,5,0" Command="{Binding ClearLogCommand}">Clear</Button>
+            </Grid>
+
+
+        </StackPanel>
+
+        <StackPanel Grid.Column="2">
+            <TextBlock  VerticalAlignment="Center" HorizontalAlignment="Center">Route Info:</TextBlock>
+            <Image></Image>
+        </StackPanel>
+
+
+        <StackPanel Grid.Column="3">
+            <TextBlock HorizontalAlignment="Center">Tour Data</TextBlock>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.7*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Margin="5,0,5,0" VerticalAlignment="Center">Name:</TextBlock>
+                <TextBox Grid.Row="0" Grid.Column="1" Name="TourName"  VerticalAlignment="Center" Text="{Binding CurrentTour.Name, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="1" Margin="5,0,5,0" VerticalAlignment="Center">Description:</TextBlock>
+                <TextBox Grid.Row="1" Grid.Column="1" Name="TourDescription"  VerticalAlignment="Center" Text="{Binding CurrentTour.Description, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="2" Margin="5,0,5,0" VerticalAlignment="Center">Distance:</TextBlock>
+                <TextBox Grid.Row="2" Grid.Column="1" Name="TourInfo"  VerticalAlignment="Center" Text="{Binding CurrentTour.Distance, Mode=TwoWay}"></TextBox>
+
+            </Grid>
+
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2">
+            <TextBlock HorizontalAlignment="Center">Tour Log</TextBlock>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.7*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Margin="5,0,5,0" VerticalAlignment="Center">Name:</TextBlock>
+                <TextBox Grid.Row="0" Grid.Column="1" Name="LogDate"  VerticalAlignment="Center" Text="{Binding CurrentLog.Date, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="1" Margin="5,0,5,0" VerticalAlignment="Center">Distance:</TextBlock>
+                <TextBox Grid.Row="1" Grid.Column="1" Name="LogDistance"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogDistance, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="2" Margin="5,0,5,0" VerticalAlignment="Center">Total Time:</TextBlock>
+                <TextBox Grid.Row="2" Grid.Column="1" Name="LogTime"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogTime, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="3" Margin="5,0,5,0" VerticalAlignment="Center">Rating:</TextBlock>
+                <TextBox Grid.Row="3" Grid.Column="1" Name="LogRating"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogRating, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="4" Margin="5,0,5,0" VerticalAlignment="Center">Avg. Speed:</TextBlock>
+                <TextBox Grid.Row="4" Grid.Column="1" Name="LogSpeed"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogSpeed, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="5" Margin="5,0,5,0" VerticalAlignment="Center">Vertical Meters (up):</TextBlock>
+                <TextBox Grid.Row="5" Grid.Column="1" Name="LogVerUp"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogVerUp, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="6" Margin="5,0,5,0" VerticalAlignment="Center">Vertical Meters (down):</TextBlock>
+                <TextBox Grid.Row="6" Grid.Column="1" Name="LogVerDown"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogVerDown, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="7" Margin="5,0,5,0" VerticalAlignment="Center">Difficulty:</TextBlock>
+                <TextBox Grid.Row="7" Grid.Column="1" Name="LogDiff"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogDiff, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="8" Margin="5,0,5,0" VerticalAlignment="Center">Joule:</TextBlock>
+                <TextBox Grid.Row="8" Grid.Column="1" Name="LogJoule"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogJoule, Mode=TwoWay}"></TextBox>
+                <TextBlock Grid.Row="9" Margin="5,0,5,0" VerticalAlignment="Center">Report:</TextBlock>
+                <TextBox Grid.Row="9" Grid.Column="1" Name="LogReport"  VerticalAlignment="Center" Text="{Binding CurrentLog.LogReport, Mode=TwoWay}"></TextBox>
+
+            </Grid>
+
+
+        </StackPanel>
+
     </Grid>
 </Window>
