--- a/SWE_TourManager/Views/MainWindowView.xaml
+++ b/SWE_TourManager/Views/MainWindowView.xaml
@@ -28,13 +28,13 @@
 
         <StackPanel Grid.Column="0" Grid.RowSpan="2">
             <Button Width="Auto" Margin="5,5,5,0" Command="{Binding NewTourCommand}">New Tour</Button>
-            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ModifyTourCommand}">Modify Tour</Button>
-            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding CopyTourCommand}">Copy Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ModifyTourCommand}" IsEnabled="{Binding ElementName=TourListBox, Path=SelectedItems.Count}">Modify Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding CopyTourCommand}" IsEnabled="{Binding ElementName=TourListBox, Path=SelectedItems.Count}">Copy Tour</Button>
             <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ImportTourCommand}">Import Tour</Button>
-            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ExportTourCommand}">Export Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding ExportTourCommand}" IsEnabled="{Binding ElementName=TourListBox, Path=SelectedItems.Count}">Export Tour</Button>
             <Button Width="Auto" Margin="5,5,5,0" Command="{Binding CreateLogCommand}" IsEnabled="{Binding ElementName=TourListBox, Path=SelectedItems.Count}" >Create Log</Button>
-            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding PrintTourCommand}">Print Tour</Button>
-            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding DeleteTourCommand}">Delete Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding PrintTourCommand}" IsEnabled="{Binding ElementName=TourListBox, Path=SelectedItems.Count}">Print Tour</Button>
+            <Button Width="Auto" Margin="5,5,5,0" Command="{Binding DeleteTourCommand}" IsEnabled="{Binding ElementName=TourListBox, Path=SelectedItems.Count}">Delete Tour</Button>
         </StackPanel>
 
         <StackPanel Orientation="Vertical" Grid.Column="1">
