--- a/SWE_TourManager/Views/CreateTour.xaml
+++ b/SWE_TourManager/Views/CreateTour.xaml
@@ -32,6 +32,7 @@
         </Grid>
 
         <Button Command="{Binding CreateTourCommand}">Create</Button>
+        <Button Command="{Binding Random}" Margin="5, 5, 5, 5" HorizontalAlignment="Left">Fill with Random</Button>
 
     </StackPanel>
 </Window>
